--- a/nacrt.html
+++ b/nacrt.html
@@ -14,21 +14,22 @@
 <body>
 
   <!-- ZAČETEK: Menujska vrstica na vrhu spletne strani -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
+        <a class="navbar-brand"><img src="http://media.tumblr.com/d3e325ba5f43368f0ceb4c615b2337fd/tumblr_inline_n0jtfpyiPf1qlda3r.jpg" class="img-rounded" alt="Cinque Terre" width="80" height="40"></a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menujska-vrstica">
           <span class="sr-only">Prikaži menu</span>
           <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </button>
         <!-- ZAČETEK: Ime vaše aplikacije -->
-        <a class="navbar-brand" href="index.html">{ime vaše aplikacije}</a>
+        <a class="navbar-brand" href="index.html" style="color: #D80000;" >TLAKOMER</a>
         <!-- KONEC: Ime vaše aplikacije -->
       </div>
       <div class="collapse navbar-collapse" id="menujska-vrstica">
         <ul class="nav navbar-nav">
-          <li><a href="opis.html">Opis ideje</a></li>
-          <li><a href="nacrt.html">Načrt informacijske rešitve</a></li>
+          <li><a href="opis.html" style="color: #D80000;" >Opis ideje</a></li>
+          <li><a href="nacrt.html" style="color: #D80000;" >Načrt informacijske rešitve</a></li>
         </ul>
       </div>
     </div>
