master detail in gen. zakjluceno

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <div class="panel-body">
             <!-- -->
             <div style="list-style-type:none">
-              <li><a><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(1)">Generiraj bolnika 1</button>
-              <li><a><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(2)">Generiraj bolnika 2</button>
-              <li><a><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(3)">Generiraj bolnika 3</button>
+              <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(1)">Generiraj bolnika 1</button>
+              <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(2)">Generiraj bolnika 2</button>
+              <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(3)">Generiraj bolnika 3</button>
             </div>
             <!-- -->
           </div>
