--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(1)">Generiraj bolnika 1</button>
               <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(2)">Generiraj bolnika 2</button>
               <li><button type="button" class="btn btn-danger btn-s" onclick="generirajPodatke(3)">Generiraj bolnika 3</button>
+              <li><span id="GenerirajSporocilo"></span>
             </div>
             <!-- -->
           </div>
@@ -77,7 +78,6 @@
 					  <div class="panel-body">
       				<input id="meritveVitalnihZnakovEHRid" type="text" class="form-control input-mini" placeholder="EhrId">
       				<button type="button" class="btn btn-danger btn-xs" onclick="preberiMeritveVitalnihZnakov()">Preberi meritve krvnega tlaka</button>
-      				<span id="preberiMeritveVitalnihZnakovSporocilo"></span>
       		    <div id="rezultatMeritveVitalnihZnakov"></div>
       		  </div>
             <!-- -->
